[package]
name = "clidle"
description = "CLI version of the popular game Wordle, guess the 5 letter word."
authors = ["Colonel Panic colonelpanic@codemonkey.wtf"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
ansi_term = "0.0.0"